

# Add  sub-projects:
add_subdirectory("Ch01_BackgroundMaths")	
add_subdirectory("Ch02_SupervisedLearning")
add_subdirectory("Ch03_ShallowNeuralNetworks")
add_subdirectory("Ch04_DeepNeuralNetworks")
add_subdirectory("Ch05_Loss_functions")
add_subdirectory("Ch06_Fitting_models")
add_subdirectory("Ch07_Gradients_and_initialization")
add_subdirectory("Ch08_Measuring_performance")
add_subdirectory("Ch09_Regularization")
add_subdirectory("Ch10_Convolutional_networks")
add_subdirectory("Ch11_Residual_networks")
